--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -76,7 +76,7 @@ hostAliases: []
 #  - "bar.local"
 
 image: "docker.elastic.co/elasticsearch/elasticsearch"
-imageTag: "8.5.1"
+imageTag: "8.6.2"
 imagePullPolicy: "IfNotPresent"
 
 podAnnotations: {}
@@ -107,9 +107,10 @@ networkHost: "0.0.0.0"
 
 volumeClaimTemplate:
   accessModes: ["ReadWriteOnce"]
+  storageClassName: "zfs"
   resources:
     requests:
-      storage: 30Gi
+      storage: 50Gi
 
 rbac:
   create: false
@@ -172,7 +173,7 @@ antiAffinityTopologyKey: "kubernetes.io/hostname"
 
 # Hard means that by default pods will only be scheduled if there are enough nodes for them
 # and that they will never end up on the same node. Setting this to soft will do this "best effort"
-antiAffinity: "hard"
+antiAffinity: "soft"
 
 # This is the node affinity settings as defined in
 # https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#node-affinity-beta-feature
